[package]
name = "comhra-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.0"
dirs = "5.0.1"
iced = { version = "0.13.1", features = ["markdown", "highlighter", "svg", "tokio"]}
iced_aw = { version = "0.11.0", default-features = false, features = ["spinner"] }
ollama-rs = { version = "0.2.1", features = ["stream"] }
serde = "1.0.210"
serde_json = "1.0.128"
